[ACCEL-44] fixed signature alignment

--- a/lms/static/sass/certificate.scss
+++ b/lms/static/sass/certificate.scss
@@ -239,9 +239,10 @@
 		display: block;
 		position: absolute;
 		left: 50%;
-		top: 50%;
-		transform: translate(-50%,-50%);
+		bottom: 3px;
+		transform: translate(-50%,0);
 		max-width: 120px;
+		max-height: 90px;
 	}
 	span {
 		color: #636466;
